<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlist_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.cjmusicapp.PlaylistEditor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/chosen_tag"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight"/>

    <TextView
        android:id="@+id/music_tag_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/music_tag_displayed"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/album_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/album_icon"
        android:clickable="true"/>

    <TextView
        android:id="@+id/playlist_displayed"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:text="@string/song_title_1"
        android:gravity="left"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight"/>

    <ImageView
        android:id="@+id/play_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/play_icon"
        android:clickable="true"/>

</LinearLayout>

    <TextView
        android:id="@+id/activity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/playlist_description"
        android:gravity="left"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight"/>

</LinearLayout>
